--- a/style.css
+++ b/style.css
@@ -15,6 +15,7 @@ nav {
     background-color: white;
     display: flex;
     
+    
 
 }
 
@@ -42,6 +43,7 @@ h4 {
     text-align: center;
     color: black;
     margin-top: 50px;
+    font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif
 
 }
 
@@ -67,7 +69,7 @@ margin-top: 70px;
 .depart button {
     height: 80px;
     width: 200px;
-    border: 1px solid black;
+    border: 0px solid black;
 
     padding: 20px;
 
@@ -86,4 +88,5 @@ margin-top: 70px;
 .depart button:hover {
     background-color: #3e58ca;
     color: white;
+    box-shadow: 2px 2px 30px 10px  #fccdef;
 }
